weatherapp/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-backend
  template:
    metadata:
      labels:
        app: weather-backend
    spec:
      containers:
      - name: weather-backend
        image: 2300090189/weather-backend:1.0
        ports:
        - containerPort: 8081
