weatherapp/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-frontend
  template:
    metadata:
      labels:
        app: weather-frontend
    spec:
      containers:
      - name: weather-frontend
        image: 2300090189/weather-frontend:1.0
        ports:
        - containerPort: 80
