weatherapp/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-backend
spec:
  selector:
    app: weather-backend
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
