weatherapp/k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-mysql
spec:
  selector:
    app: weather-mysql
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None  # headless
